--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ h1{
 }
 
 .blue-highlight{
-    color: rgb(12, 168, 240);
+    color: rgb(33, 90, 245);
+}
+
+.title-summary{
+
+    color: rgb(2, 173, 252);
+
 }
 
 .half-width{
@@ -40,6 +46,7 @@ section{
     color: white;
     font-weight: 700;
     border-radius: 20px;
+    box-shadow: 3px 3px 12px blue;
 
 
 }
@@ -66,3 +73,49 @@ section{
 
 }
 
+
+.third-half-width{
+
+    box-shadow: 5px 5px 40px gray;
+    border-radius: 10px;
+
+    width: 40%;
+    float: left;
+    margin-left: 6%;
+
+    padding-left: 2%;
+    margin-top: 1%;
+
+    height: 70%;
+    background-color: white;
+
+
+}
+
+.experience-area{
+    background-image: url(images/exp-bg.png );
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+#full-stack{
+    border-left: 7px solid tomato;
+    border-image: linear-gradiant(lightsalmon  ) ;
+}
+
+#baby-web{
+    border-left: 7px solid rgb(45, 131, 230);
+    border-image: linear-gradiant(rgb(41, 3, 253) rgb(57, 178, 235) ) ;
+}
+
+
+#exp{
+    color: rgb(34, 47, 53);
+    margin-left: 1%;
+}
+
+
+footer{
+    text-align: center;
+    font-size: 12px;
+}
